--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -492,7 +492,7 @@
                                     <td>{{i + 1}}</td>
                                     <td>{{benchmark?.benchmark?.nameEn}}</td>
                                     <td>{{benchmark.date}}</td>
-                                    <td>{{benchmark.returnValue}}</td>
+                                    <td>{{benchmark.calculatedMonthReturn}}</td>
                                     <td>{{benchmark.ytd}}</td>
                                     <td>&nbsp;</td>
                                 </tr>
@@ -1338,7 +1338,7 @@
                                     <td>{{i + 1}}</td>
                                     <td>{{benchmark?.benchmark?.nameEn}}</td>
                                     <td>{{benchmark.date}}</td>
-                                    <td>{{benchmark.returnValue}}</td>
+                                    <td>{{benchmark.calculatedMonthReturn}}</td>
                                     <td>{{benchmark.ytd}}</td>
                                     <td>&nbsp;</td>
                                 </tr>
